tests/baselines/reference/exportDefaultDuplicateCrash.errors.txt
tests/cases/compiler/exportDefaultDuplicateCrash.ts(3,1): error TS2323: Cannot redeclare exported variable 'default'.
tests/cases/compiler/exportDefaultDuplicateCrash.ts(3,1): error TS2528: A module cannot have multiple default exports.
tests/cases/compiler/exportDefaultDuplicateCrash.ts(4,10): error TS2323: Cannot redeclare exported variable 'default'.
tests/cases/compiler/exportDefaultDuplicateCrash.ts(4,10): error TS2528: A module cannot have multiple default exports.
tests/cases/compiler/exportDefaultDuplicateCrash.ts(4,25): error TS2307: Cannot find module './hi' or its corresponding type declarations.
tests/cases/compiler/exportDefaultDuplicateCrash.ts(5,16): error TS2528: A module cannot have multiple default exports.
tests/cases/compiler/exportDefaultDuplicateCrash.ts(5,31): error TS2307: Cannot find module './hi' or its corresponding type declarations.


==== tests/cases/compiler/exportDefaultDuplicateCrash.ts (7 errors) ====
    // #38214
    
    export default function () { }
    ~~~~~~
!!! error TS2323: Cannot redeclare exported variable 'default'.
    ~~~~~~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2753 tests/cases/compiler/exportDefaultDuplicateCrash.ts:5:16: Another export default is here.
    export { default } from './hi'
             ~~~~~~~
!!! error TS2323: Cannot redeclare exported variable 'default'.
             ~~~~~~~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS6204 tests/cases/compiler/exportDefaultDuplicateCrash.ts:5:16: and here.
                            ~~~~~~
!!! error TS2307: Cannot find module './hi' or its corresponding type declarations.
    export { aa as default } from './hi'
                   ~~~~~~~
!!! error TS2528: A module cannot have multiple default exports.
!!! related TS2752 tests/cases/compiler/exportDefaultDuplicateCrash.ts:3:1: The first export default is here.
!!! related TS2752 tests/cases/compiler/exportDefaultDuplicateCrash.ts:4:10: The first export default is here.
                                  ~~~~~~
!!! error TS2307: Cannot find module './hi' or its corresponding type declarations.
    